Chapter 5 服务 让客户端发现Pod并与之通信/external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
  subsets:
  - addresses:
    - ip: 11.11.11.11
    - ip: 22.22.22.22
    ports:
    - port: 80
