Chapter 5 服务 让客户端发现Pod并与之通信/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service1
spec:
  type: ExternalName
  externalName: www.github.com
  ports:
  - port: 80
